# Arquitectura-de-computadoras

TP1/: ALU.v  Interface.v  constraints.xdc  tb_interface.v  top.v  top_tb.v
TP1/src/: constraints.xdc  top_tb.v
TP2/: README.md
TP2/UI/: pyproject.toml  serial_app.py
TP2/UI/interfaz_2/: UART.py
TP2/misc/: mux_fifo_alu.v
TP2/rtl/: baud_rate_gen.v  constraint.xdc  fifo_buffer.v  flag_buf.v  interface_uart_alu.v  top.v  tx_alu.v  uart_rx.v  uart_tx.v
TP2/tb/: tb_baud_rate_and_receiver.v  tb_baud_rate_gen.v  tb_receiver_interface.v
TP3/: .gitattributes  .gitignore  README.md
TP3/Instructions/: data_hazard_forwarding.txt  loop_jump.txt  op_aritmeticas.txt  subrutina.txt
TP3/UI/: instructions.txt  pipeline-interface.py  pyproject.toml
TP3/UI/src/: compiler.py  comunicator.py  interface.py  main.py
TP3/media/: transmission_interfaces_diagram.drawio
TP3/sim/TP3_PIPELINE/: TP3_PIPELINE.xpr
TP3/sim/tb_top_pipeline/: tb_top_pipeline.xpr  tb_top_pipeline_behav.wcfg
TP3/src/: Instruction_decode.v  constraint.xdc  debug_unit.v  forwarding_unit.v  hazard_detection_unit.v  instruction_fetch.v  program_counter.v  register_bank.v  top.v  uart_rx.v  xilinx_one_port_ram_async.v
TP3/src/EX/: ALU.v  intruction_exec.v
TP3/src/ID/: Instruction_decode.v  control_unit.v  register_bank.v
TP3/src/IF/: instruction_fetch.v  program_counter.v
TP3/src/Imp/: constraint.xdc  top_pipeline.bit
TP3/src/MEM/: instruction_memory.v
TP3/src/Misc/: debug_unit.v  forwarding_unit.v  hazard_detection_unit.v  (+1 more)
TP3/tb/: ex_tb.v  id_tb.v  if_tb.v  pc_tb.v  pip_tb.v  top_tb.v
(+101 files in other folders)
