[tool.poetry]
name = "uss"
version = "0.1.0"
description = "Interfaz para el usuario TP2"
authors = ["Bruno Guglielmotti - Franco Rodriguez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
